gotify/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify-ingress
  namespace: gotify
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: gotify.home.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gotify-service
            port:
              number: 80
